--- a/css/materialdesignicons.css
+++ b/css/materialdesignicons.css
@@ -1,8 +1,8 @@
 /* MaterialDesignIcons.com */
 @font-face {
   font-family: "Material Design Icons";
-  src: url("../fonts/materialdesignicons-webfont.eot?v=5.1.45");
-  src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=5.1.45") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=5.1.45") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=5.1.45") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=5.1.45") format("truetype");
+  src: url("../fonts/materialdesignicons-webfont.eot?v=5.2.45");
+  src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=5.2.45") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=5.2.45") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=5.2.45") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=5.2.45") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -416,6 +416,10 @@
 
 .mdi-air-humidifier::before {
   content: "\F1099";
+}
+
+.mdi-air-humidifier-off::before {
+  content: "\F1466";
 }
 
 .mdi-air-purifier::before {
@@ -4990,6 +4994,10 @@
   content: "\F07B4";
 }
 
+.mdi-chili-off::before {
+  content: "\F1467";
+}
+
 .mdi-chip::before {
   content: "\F061A";
 }
@@ -5008,6 +5016,10 @@
 
 .mdi-cigar::before {
   content: "\F1189";
+}
+
+.mdi-cigar-off::before {
+  content: "\F141B";
 }
 
 .mdi-circle::before {
@@ -5318,6 +5330,102 @@
   content: "\F0155";
 }
 
+.mdi-clock-time-eight::before {
+  content: "\F1446";
+}
+
+.mdi-clock-time-eight-outline::before {
+  content: "\F1452";
+}
+
+.mdi-clock-time-eleven::before {
+  content: "\F1449";
+}
+
+.mdi-clock-time-eleven-outline::before {
+  content: "\F1455";
+}
+
+.mdi-clock-time-five::before {
+  content: "\F1443";
+}
+
+.mdi-clock-time-five-outline::before {
+  content: "\F144F";
+}
+
+.mdi-clock-time-four::before {
+  content: "\F1442";
+}
+
+.mdi-clock-time-four-outline::before {
+  content: "\F144E";
+}
+
+.mdi-clock-time-nine::before {
+  content: "\F1447";
+}
+
+.mdi-clock-time-nine-outline::before {
+  content: "\F1453";
+}
+
+.mdi-clock-time-one::before {
+  content: "\F143F";
+}
+
+.mdi-clock-time-one-outline::before {
+  content: "\F144B";
+}
+
+.mdi-clock-time-seven::before {
+  content: "\F1445";
+}
+
+.mdi-clock-time-seven-outline::before {
+  content: "\F1451";
+}
+
+.mdi-clock-time-six::before {
+  content: "\F1444";
+}
+
+.mdi-clock-time-six-outline::before {
+  content: "\F1450";
+}
+
+.mdi-clock-time-ten::before {
+  content: "\F1448";
+}
+
+.mdi-clock-time-ten-outline::before {
+  content: "\F1454";
+}
+
+.mdi-clock-time-three::before {
+  content: "\F1441";
+}
+
+.mdi-clock-time-three-outline::before {
+  content: "\F144D";
+}
+
+.mdi-clock-time-twelve::before {
+  content: "\F144A";
+}
+
+.mdi-clock-time-twelve-outline::before {
+  content: "\F1456";
+}
+
+.mdi-clock-time-two::before {
+  content: "\F1440";
+}
+
+.mdi-clock-time-two-outline::before {
+  content: "\F144C";
+}
+
 .mdi-close::before {
   content: "\F0156";
 }
@@ -5622,6 +5730,22 @@
   content: "\F08BB";
 }
 
+.mdi-cog-refresh::before {
+  content: "\F145E";
+}
+
+.mdi-cog-refresh-outline::before {
+  content: "\F145F";
+}
+
+.mdi-cog-sync::before {
+  content: "\F1460";
+}
+
+.mdi-cog-sync-outline::before {
+  content: "\F1461";
+}
+
 .mdi-cog-transfer::before {
   content: "\F105B";
 }
@@ -5922,6 +6046,14 @@
   content: "\F0F44";
 }
 
+.mdi-content-save-cog::before {
+  content: "\F145B";
+}
+
+.mdi-content-save-cog-outline::before {
+  content: "\F145C";
+}
+
 .mdi-content-save-edit::before {
   content: "\F0CFB";
 }
@@ -5992,6 +6124,10 @@
 
 .mdi-corn-off::before {
   content: "\F13EF";
+}
+
+.mdi-cosine-wave::before {
+  content: "\F1479";
 }
 
 .mdi-counter::before {
@@ -6196,6 +6332,14 @@
 
 .mdi-cube::before {
   content: "\F01A6";
+}
+
+.mdi-cube-off::before {
+  content: "\F141C";
+}
+
+.mdi-cube-off-outline::before {
+  content: "\F141D";
 }
 
 .mdi-cube-outline::before {
@@ -6954,6 +7098,10 @@
   content: "\F10AE";
 }
 
+.mdi-dome-light::before {
+  content: "\F141E";
+}
+
 .mdi-domino-mask::before {
   content: "\F1023";
 }
@@ -7020,6 +7168,22 @@
 
 .mdi-download::before {
   content: "\F01DA";
+}
+
+.mdi-download-box::before {
+  content: "\F1462";
+}
+
+.mdi-download-box-outline::before {
+  content: "\F1463";
+}
+
+.mdi-download-circle::before {
+  content: "\F1464";
+}
+
+.mdi-download-circle-outline::before {
+  content: "\F1465";
 }
 
 .mdi-download-lock::before {
@@ -7810,8 +7974,44 @@
   content: "\F0210";
 }
 
+.mdi-fan-alert::before {
+  content: "\F146C";
+}
+
+.mdi-fan-chevron-down::before {
+  content: "\F146D";
+}
+
+.mdi-fan-chevron-up::before {
+  content: "\F146E";
+}
+
+.mdi-fan-minus::before {
+  content: "\F1470";
+}
+
 .mdi-fan-off::before {
   content: "\F081D";
+}
+
+.mdi-fan-plus::before {
+  content: "\F146F";
+}
+
+.mdi-fan-remove::before {
+  content: "\F1471";
+}
+
+.mdi-fan-speed-1::before {
+  content: "\F1472";
+}
+
+.mdi-fan-speed-2::before {
+  content: "\F1473";
+}
+
+.mdi-fan-speed-3::before {
+  content: "\F1474";
 }
 
 .mdi-fast-forward::before {
@@ -9058,12 +9258,36 @@
   content: "\F07C8";
 }
 
+.mdi-food-drumstick::before {
+  content: "\F141F";
+}
+
+.mdi-food-drumstick-off::before {
+  content: "\F1468";
+}
+
+.mdi-food-drumstick-off-outline::before {
+  content: "\F1469";
+}
+
+.mdi-food-drumstick-outline::before {
+  content: "\F1420";
+}
+
 .mdi-food-fork-drink::before {
   content: "\F05F2";
 }
 
 .mdi-food-off::before {
   content: "\F05F3";
+}
+
+.mdi-food-steak::before {
+  content: "\F146A";
+}
+
+.mdi-food-steak-off::before {
+  content: "\F146B";
 }
 
 .mdi-food-variant::before {
@@ -9638,8 +9862,16 @@
   content: "\F0C85";
 }
 
+.mdi-fuse-alert::before {
+  content: "\F142D";
+}
+
 .mdi-fuse-blade::before {
   content: "\F0C86";
+}
+
+.mdi-fuse-off::before {
+  content: "\F142C";
 }
 
 .mdi-gamepad::before {
@@ -10590,6 +10822,14 @@
   content: "\F06E0";
 }
 
+.mdi-heart-minus::before {
+  content: "\F142F";
+}
+
+.mdi-heart-minus-outline::before {
+  content: "\F1432";
+}
+
 .mdi-heart-multiple::before {
   content: "\F0A56";
 }
@@ -10602,12 +10842,32 @@
   content: "\F0759";
 }
 
+.mdi-heart-off-outline::before {
+  content: "\F1434";
+}
+
 .mdi-heart-outline::before {
   content: "\F02D5";
 }
 
+.mdi-heart-plus::before {
+  content: "\F142E";
+}
+
+.mdi-heart-plus-outline::before {
+  content: "\F1431";
+}
+
 .mdi-heart-pulse::before {
   content: "\F05F6";
+}
+
+.mdi-heart-remove::before {
+  content: "\F1430";
+}
+
+.mdi-heart-remove-outline::before {
+  content: "\F1433";
 }
 
 .mdi-helicopter::before {
@@ -10968,6 +11228,10 @@
 
 .mdi-hot-tub::before {
   content: "\F0828";
+}
+
+.mdi-hours-24::before {
+  content: "\F1478";
 }
 
 .mdi-hubspot::before {
@@ -11332,6 +11596,14 @@
 
 .mdi-incognito::before {
   content: "\F05F9";
+}
+
+.mdi-incognito-circle::before {
+  content: "\F1421";
+}
+
+.mdi-incognito-circle-off::before {
+  content: "\F1422";
 }
 
 .mdi-incognito-off::before {
@@ -12088,6 +12360,10 @@
 
 .mdi-lightning-bolt-outline::before {
   content: "\F140C";
+}
+
+.mdi-lingerie::before {
+  content: "\F1476";
 }
 
 .mdi-link::before {
@@ -13010,6 +13286,10 @@
   content: "\F0C99";
 }
 
+.mdi-microwave-off::before {
+  content: "\F1423";
+}
+
 .mdi-middleware::before {
   content: "\F0F5D";
 }
@@ -13072,6 +13352,14 @@
 
 .mdi-minus-circle-multiple-outline::before {
   content: "\F0AD3";
+}
+
+.mdi-minus-circle-off::before {
+  content: "\F1459";
+}
+
+.mdi-minus-circle-off-outline::before {
+  content: "\F145A";
 }
 
 .mdi-minus-circle-outline::before {
@@ -13220,6 +13508,10 @@
 
 .mdi-motion-sensor::before {
   content: "\F0D91";
+}
+
+.mdi-motion-sensor-off::before {
+  content: "\F1435";
 }
 
 .mdi-motorbike::before {
@@ -14318,6 +14610,42 @@
   content: "\F1417";
 }
 
+.mdi-pail-minus::before {
+  content: "\F1437";
+}
+
+.mdi-pail-minus-outline::before {
+  content: "\F143C";
+}
+
+.mdi-pail-off::before {
+  content: "\F1439";
+}
+
+.mdi-pail-off-outline::before {
+  content: "\F143E";
+}
+
+.mdi-pail-outline::before {
+  content: "\F143A";
+}
+
+.mdi-pail-plus::before {
+  content: "\F1436";
+}
+
+.mdi-pail-plus-outline::before {
+  content: "\F143B";
+}
+
+.mdi-pail-remove::before {
+  content: "\F1438";
+}
+
+.mdi-pail-remove-outline::before {
+  content: "\F143D";
+}
+
 .mdi-palette::before {
   content: "\F03D8";
 }
@@ -14930,6 +15258,10 @@
   content: "\F0406";
 }
 
+.mdi-pine-tree-fire::before {
+  content: "\F141A";
+}
+
 .mdi-pinterest::before {
   content: "\F0407";
 }
@@ -15274,6 +15606,14 @@
   content: "\F06A6";
 }
 
+.mdi-power-plug-off-outline::before {
+  content: "\F1424";
+}
+
+.mdi-power-plug-outline::before {
+  content: "\F1425";
+}
+
 .mdi-power-settings::before {
   content: "\F0426";
 }
@@ -15366,12 +15706,20 @@
   content: "\F1146";
 }
 
+.mdi-printer-eye::before {
+  content: "\F1458";
+}
+
 .mdi-printer-off::before {
   content: "\F0E5D";
 }
 
 .mdi-printer-pos::before {
   content: "\F1057";
+}
+
+.mdi-printer-search::before {
+  content: "\F1457";
 }
 
 .mdi-printer-settings::before {
@@ -15468,6 +15816,14 @@
 
 .mdi-puzzle::before {
   content: "\F0431";
+}
+
+.mdi-puzzle-check::before {
+  content: "\F1426";
+}
+
+.mdi-puzzle-check-outline::before {
+  content: "\F1427";
 }
 
 .mdi-puzzle-outline::before {
@@ -16090,6 +16446,10 @@
   content: "\F0F21";
 }
 
+.mdi-rug::before {
+  content: "\F1475";
+}
+
 .mdi-rugby::before {
   content: "\F0D99";
 }
@@ -16176,6 +16536,10 @@
 
 .mdi-saw-blade::before {
   content: "\F0E61";
+}
+
+.mdi-sawtooth-wave::before {
+  content: "\F147A";
 }
 
 .mdi-saxophone::before {
@@ -16580,6 +16944,10 @@
 
 .mdi-set-right::before {
   content: "\F077F";
+}
+
+.mdi-set-square::before {
+  content: "\F145D";
 }
 
 .mdi-set-top-box::before {
@@ -17262,6 +17630,10 @@
   content: "\F140D";
 }
 
+.mdi-smoking-pipe-off::before {
+  content: "\F1428";
+}
+
 .mdi-snapchat::before {
   content: "\F04B6";
 }
@@ -17546,6 +17918,10 @@
   content: "\F0BCA";
 }
 
+.mdi-spoon-sugar::before {
+  content: "\F1429";
+}
+
 .mdi-spotify::before {
   content: "\F04C7";
 }
@@ -17620,6 +17996,10 @@
 
 .mdi-square-small::before {
   content: "\F0A15";
+}
+
+.mdi-square-wave::before {
+  content: "\F147B";
 }
 
 .mdi-squeegee::before {
@@ -18022,7 +18402,7 @@
   content: "\F1335";
 }
 
-.mdi-syllabary-katakana-half-width::before {
+.mdi-syllabary-katakana-halfwidth::before {
   content: "\F1336";
 }
 
@@ -18248,6 +18628,10 @@
 
 .mdi-table-settings::before {
   content: "\F0838";
+}
+
+.mdi-table-split-cell::before {
+  content: "\F142A";
 }
 
 .mdi-table-star::before {
@@ -18696,6 +19080,10 @@
 
 .mdi-ticket-percent::before {
   content: "\F0724";
+}
+
+.mdi-ticket-percent-outline::before {
+  content: "\F142B";
 }
 
 .mdi-tie::before {
@@ -19156,6 +19544,10 @@
 
 .mdi-triangle-outline::before {
   content: "\F0537";
+}
+
+.mdi-triangle-wave::before {
+  content: "\F147C";
 }
 
 .mdi-triforce::before {
@@ -20090,6 +20482,10 @@
   content: "\F0F2E";
 }
 
+.mdi-waveform::before {
+  content: "\F147D";
+}
+
 .mdi-waves::before {
   content: "\F078D";
 }
@@ -20444,6 +20840,10 @@
 
 .mdi-wiper-wash::before {
   content: "\F0DA6";
+}
+
+.mdi-wizard-hat::before {
+  content: "\F1477";
 }
 
 .mdi-wordpress::before {
