--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "normal";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "5.1.45" !default;
+$mdi-version:          "5.2.45" !default;
 
 $mdi-icons: (
   "ab-testing": F01C9,
@@ -108,6 +108,7 @@ $mdi-icons: (
   "air-filter": F0D43,
   "air-horn": F0DAC,
   "air-humidifier": F1099,
+  "air-humidifier-off": F1466,
   "air-purifier": F0D44,
   "airbag": F0BE9,
   "airballoon": F001C,
@@ -1251,11 +1252,13 @@ $mdi-icons: (
   "chili-hot": F07B2,
   "chili-medium": F07B3,
   "chili-mild": F07B4,
+  "chili-off": F1467,
   "chip": F061A,
   "christianity": F0953,
   "christianity-outline": F0CF6,
   "church": F0144,
   "cigar": F1189,
+  "cigar-off": F141B,
   "circle": F0765,
   "circle-double": F0E95,
   "circle-edit-outline": F08D5,
@@ -1333,6 +1336,30 @@ $mdi-icons: (
   "clock-out": F0154,
   "clock-outline": F0150,
   "clock-start": F0155,
+  "clock-time-eight": F1446,
+  "clock-time-eight-outline": F1452,
+  "clock-time-eleven": F1449,
+  "clock-time-eleven-outline": F1455,
+  "clock-time-five": F1443,
+  "clock-time-five-outline": F144F,
+  "clock-time-four": F1442,
+  "clock-time-four-outline": F144E,
+  "clock-time-nine": F1447,
+  "clock-time-nine-outline": F1453,
+  "clock-time-one": F143F,
+  "clock-time-one-outline": F144B,
+  "clock-time-seven": F1445,
+  "clock-time-seven-outline": F1451,
+  "clock-time-six": F1444,
+  "clock-time-six-outline": F1450,
+  "clock-time-ten": F1448,
+  "clock-time-ten-outline": F1454,
+  "clock-time-three": F1441,
+  "clock-time-three-outline": F144D,
+  "clock-time-twelve": F144A,
+  "clock-time-twelve-outline": F1456,
+  "clock-time-two": F1440,
+  "clock-time-two-outline": F144C,
   "close": F0156,
   "close-box": F0157,
   "close-box-multiple": F0C5D,
@@ -1409,6 +1436,10 @@ $mdi-icons: (
   "cog-off": F13CE,
   "cog-off-outline": F13CF,
   "cog-outline": F08BB,
+  "cog-refresh": F145E,
+  "cog-refresh-outline": F145F,
+  "cog-sync": F1460,
+  "cog-sync-outline": F1461,
   "cog-transfer": F105B,
   "cog-transfer-outline": F105C,
   "cogs": F08D6,
@@ -1484,6 +1515,8 @@ $mdi-icons: (
   "content-save-alert-outline": F0F43,
   "content-save-all": F0194,
   "content-save-all-outline": F0F44,
+  "content-save-cog": F145B,
+  "content-save-cog-outline": F145C,
   "content-save-edit": F0CFB,
   "content-save-edit-outline": F0CFC,
   "content-save-move": F0E27,
@@ -1502,6 +1535,7 @@ $mdi-icons: (
   "cordova": F0958,
   "corn": F07B8,
   "corn-off": F13EF,
+  "cosine-wave": F1479,
   "counter": F0199,
   "cow": F019A,
   "cpu-32-bit": F0EDF,
@@ -1553,6 +1587,8 @@ $mdi-icons: (
   "cryengine": F0959,
   "crystal-ball": F0B2F,
   "cube": F01A6,
+  "cube-off": F141C,
+  "cube-off-outline": F141D,
   "cube-outline": F01A7,
   "cube-scan": F0B84,
   "cube-send": F01A8,
@@ -1742,6 +1778,7 @@ $mdi-icons: (
   "domain-off": F0D6F,
   "domain-plus": F10AD,
   "domain-remove": F10AE,
+  "dome-light": F141E,
   "domino-mask": F1023,
   "donkey": F07C2,
   "door": F081A,
@@ -1759,6 +1796,10 @@ $mdi-icons: (
   "dots-vertical-circle-outline": F0B8E,
   "douban": F069A,
   "download": F01DA,
+  "download-box": F1462,
+  "download-box-outline": F1463,
+  "download-circle": F1464,
+  "download-circle-outline": F1465,
   "download-lock": F1320,
   "download-lock-outline": F1321,
   "download-multiple": F09E9,
@@ -1956,7 +1997,16 @@ $mdi-icons: (
   "facebook-workplace": F0B31,
   "factory": F020F,
   "fan": F0210,
+  "fan-alert": F146C,
+  "fan-chevron-down": F146D,
+  "fan-chevron-up": F146E,
+  "fan-minus": F1470,
   "fan-off": F081D,
+  "fan-plus": F146F,
+  "fan-remove": F1471,
+  "fan-speed-1": F1472,
+  "fan-speed-2": F1473,
+  "fan-speed-3": F1474,
   "fast-forward": F0211,
   "fast-forward-10": F0D71,
   "fast-forward-30": F0D06,
@@ -2268,8 +2318,14 @@ $mdi-icons: (
   "food-apple": F025B,
   "food-apple-outline": F0C84,
   "food-croissant": F07C8,
+  "food-drumstick": F141F,
+  "food-drumstick-off": F1468,
+  "food-drumstick-off-outline": F1469,
+  "food-drumstick-outline": F1420,
   "food-fork-drink": F05F2,
   "food-off": F05F3,
+  "food-steak": F146A,
+  "food-steak-off": F146B,
   "food-variant": F025C,
   "food-variant-off": F13E5,
   "foot-print": F0F52,
@@ -2413,7 +2469,9 @@ $mdi-icons: (
   "furigana-horizontal": F1081,
   "furigana-vertical": F1082,
   "fuse": F0C85,
+  "fuse-alert": F142D,
   "fuse-blade": F0C86,
+  "fuse-off": F142C,
   "gamepad": F0296,
   "gamepad-circle": F0E33,
   "gamepad-circle-down": F0E34,
@@ -2651,11 +2709,18 @@ $mdi-icons: (
   "heart-half": F06DF,
   "heart-half-full": F06DE,
   "heart-half-outline": F06E0,
+  "heart-minus": F142F,
+  "heart-minus-outline": F1432,
   "heart-multiple": F0A56,
   "heart-multiple-outline": F0A57,
   "heart-off": F0759,
+  "heart-off-outline": F1434,
   "heart-outline": F02D5,
+  "heart-plus": F142E,
+  "heart-plus-outline": F1431,
   "heart-pulse": F05F6,
+  "heart-remove": F1430,
+  "heart-remove-outline": F1433,
   "helicopter": F0AC2,
   "help": F02D6,
   "help-box": F078B,
@@ -2746,6 +2811,7 @@ $mdi-icons: (
   "hospital-building": F02E1,
   "hospital-marker": F02E2,
   "hot-tub": F0828,
+  "hours-24": F1478,
   "hubspot": F0D17,
   "hulu": F0829,
   "human": F02E6,
@@ -2837,6 +2903,8 @@ $mdi-icons: (
   "inbox-multiple-outline": F0BA8,
   "inbox-outline": F1274,
   "incognito": F05F9,
+  "incognito-circle": F1421,
+  "incognito-circle-off": F1422,
   "incognito-off": F0075,
   "infinity": F06E4,
   "information": F02FC,
@@ -3026,6 +3094,7 @@ $mdi-icons: (
   "lighthouse-on": F0A00,
   "lightning-bolt": F140B,
   "lightning-bolt-outline": F140C,
+  "lingerie": F1476,
   "link": F0337,
   "link-box": F0D1A,
   "link-box-outline": F0D1B,
@@ -3256,6 +3325,7 @@ $mdi-icons: (
   "microsoft-xbox-controller-view": F0E70,
   "microsoft-yammer": F0789,
   "microwave": F0C99,
+  "microwave-off": F1423,
   "middleware": F0F5D,
   "middleware-outline": F0F5E,
   "midi": F08F1,
@@ -3272,6 +3342,8 @@ $mdi-icons: (
   "minus-circle": F0376,
   "minus-circle-multiple": F035A,
   "minus-circle-multiple-outline": F0AD3,
+  "minus-circle-off": F1459,
+  "minus-circle-off-outline": F145A,
   "minus-circle-outline": F0377,
   "minus-network": F0378,
   "minus-network-outline": F0C9A,
@@ -3309,6 +3381,7 @@ $mdi-icons: (
   "mother-heart": F1314,
   "mother-nurse": F0D21,
   "motion-sensor": F0D91,
+  "motion-sensor-off": F1435,
   "motorbike": F037C,
   "mouse": F037D,
   "mouse-bluetooth": F098B,
@@ -3583,6 +3656,15 @@ $mdi-icons: (
   "page-previous": F0BB2,
   "page-previous-outline": F0BB3,
   "pail": F1417,
+  "pail-minus": F1437,
+  "pail-minus-outline": F143C,
+  "pail-off": F1439,
+  "pail-off-outline": F143E,
+  "pail-outline": F143A,
+  "pail-plus": F1436,
+  "pail-plus-outline": F143B,
+  "pail-remove": F1438,
+  "pail-remove-outline": F143D,
   "palette": F03D8,
   "palette-advanced": F03D9,
   "palette-outline": F0E0C,
@@ -3736,6 +3818,7 @@ $mdi-icons: (
   "pin-outline": F0931,
   "pine-tree": F0405,
   "pine-tree-box": F0406,
+  "pine-tree-fire": F141A,
   "pinterest": F0407,
   "pinwheel": F0AD5,
   "pinwheel-outline": F0AD6,
@@ -3822,6 +3905,8 @@ $mdi-icons: (
   "power-on": F0903,
   "power-plug": F06A5,
   "power-plug-off": F06A6,
+  "power-plug-off-outline": F1424,
+  "power-plug-outline": F1425,
   "power-settings": F0426,
   "power-sleep": F0904,
   "power-socket": F0427,
@@ -3845,8 +3930,10 @@ $mdi-icons: (
   "printer-3d-nozzle-outline": F0E5C,
   "printer-alert": F042C,
   "printer-check": F1146,
+  "printer-eye": F1458,
   "printer-off": F0E5D,
   "printer-pos": F1057,
+  "printer-search": F1457,
   "printer-settings": F0707,
   "printer-wireless": F0A0B,
   "priority-high": F0603,
@@ -3871,6 +3958,8 @@ $mdi-icons: (
   "purse": F0F1C,
   "purse-outline": F0F1D,
   "puzzle": F0431,
+  "puzzle-check": F1426,
+  "puzzle-check-outline": F1427,
   "puzzle-outline": F0A66,
   "qi": F0999,
   "qqchat": F0605,
@@ -4026,6 +4115,7 @@ $mdi-icons: (
   "rss": F046B,
   "rss-box": F046C,
   "rss-off": F0F21,
+  "rug": F1475,
   "rugby": F0D99,
   "ruler": F046D,
   "ruler-square": F0CC2,
@@ -4048,6 +4138,7 @@ $mdi-icons: (
   "satellite-variant": F0471,
   "sausage": F08BA,
   "saw-blade": F0E61,
+  "sawtooth-wave": F147A,
   "saxophone": F0609,
   "scale": F0472,
   "scale-balance": F05D1,
@@ -4149,6 +4240,7 @@ $mdi-icons: (
   "set-left-right": F077D,
   "set-none": F077E,
   "set-right": F077F,
+  "set-square": F145D,
   "set-top-box": F099F,
   "settings-helper": F0A6E,
   "shaker": F110E,
@@ -4319,6 +4411,7 @@ $mdi-icons: (
   "smoking": F04B4,
   "smoking-off": F04B5,
   "smoking-pipe": F140D,
+  "smoking-pipe-off": F1428,
   "snapchat": F04B6,
   "snowboard": F1307,
   "snowflake": F0717,
@@ -4390,6 +4483,7 @@ $mdi-icons: (
   "spider": F11EA,
   "spider-thread": F11EB,
   "spider-web": F0BCA,
+  "spoon-sugar": F1429,
   "spotify": F04C7,
   "spotlight": F04C8,
   "spotlight-beam": F04C9,
@@ -4409,6 +4503,7 @@ $mdi-icons: (
   "square-root": F0784,
   "square-root-box": F09A3,
   "square-small": F0A15,
+  "square-wave": F147B,
   "squeegee": F0AE1,
   "ssh": F08C0,
   "stack-exchange": F060B,
@@ -4509,7 +4604,7 @@ $mdi-icons: (
   "syllabary-hangul": F1333,
   "syllabary-hiragana": F1334,
   "syllabary-katakana": F1335,
-  "syllabary-katakana-half-width": F1336,
+  "syllabary-katakana-halfwidth": F1336,
   "symfony": F0AE6,
   "sync": F04E6,
   "sync-alert": F04E7,
@@ -4566,6 +4661,7 @@ $mdi-icons: (
   "table-row-remove": F04F5,
   "table-search": F090F,
   "table-settings": F0838,
+  "table-split-cell": F142A,
   "table-star": F13CB,
   "table-sync": F13A1,
   "table-tennis": F0E68,
@@ -4678,6 +4774,7 @@ $mdi-icons: (
   "ticket-confirmation-outline": F13AA,
   "ticket-outline": F0913,
   "ticket-percent": F0724,
+  "ticket-percent-outline": F142B,
   "tie": F0519,
   "tilde": F0725,
   "timelapse": F051A,
@@ -4793,6 +4890,7 @@ $mdi-icons: (
   "trending-up": F0535,
   "triangle": F0536,
   "triangle-outline": F0537,
+  "triangle-wave": F147C,
   "triforce": F0BD9,
   "trophy": F0538,
   "trophy-award": F0539,
@@ -5026,6 +5124,7 @@ $mdi-icons: (
   "water-well-outline": F106C,
   "watermark": F0612,
   "wave": F0F2E,
+  "waveform": F147D,
   "waves": F078D,
   "waze": F0BDE,
   "weather-cloudy": F0590,
@@ -5115,6 +5214,7 @@ $mdi-icons: (
   "window-shutter-open": F111E,
   "wiper": F0AE9,
   "wiper-wash": F0DA6,
+  "wizard-hat": F1477,
   "wordpress": F05B4,
   "wrap": F05B6,
   "wrap-disabled": F0BDF,
