new build system

--- a/scss/_var-icons.scss
+++ b/scss/_var-icons.scss
@@ -1,226 +1,230 @@
 $adi-icons: (
-     "abecedario": 61,
-     "adn": 62,
-     "alarma": 63,
-     "ambulancia": 64,
-     "anciana": 65,
-     "andes": 66,
-     "anestesia": 67,
-     "auto-policia": 68,
-     "bisturi": 69,
-     "bloques-reloj": 6a,
-     "calendario": 6b,
-     "calendario-fecha-outline": 6e,
-     "calendario-flecha-abajo": 6f,
-     "calendario-flechas-circulares": 70,
-     "calendario-mas": 71,
-     "calendario-rango-bold": 72,
-     "calendario-tilde": 73,
-     "calendarios": 74,
-     "cama": 75,
-     "cama-candado": 76,
-     "cama-destendida": 77,
-     "cama-engranaje": 78,
-     "cama-herramienta": 79,
-     "cama-paciente": 7a,
-     "cama-reloj": 6c,
-     "camara-foto": 6d,
-     "camilla": 41,
-     "camion-bomberos": 42,
-     "candado": 43,
-     "celular": 44,
-     "celular-llave": 45,
-     "celular-mano": 46,
-     "celular-paciente": 47,
-     "centro-salud": 48,
-     "circulo-botella": 49,
-     "circulo-camara": 4a,
-     "circulo-hospital": 4b,
-     "circulo-madre-hijo": 4c,
-     "circulo-medico": 4d,
-     "circulo-paciente": 4e,
-     "click": 4f,
-     "clinica": 50,
-     "corazon": 51,
-     "corazon-cruz": 52,
-     "corazon-outline": 53,
-     "credencial-paciente": 54,
-     "credencial-usuario": 55,
-     "cruz": 56,
-     "cruz-hospital": 57,
-     "cuentagota": 58,
-     "cuerpo": 59,
-     "cuna-candado": 5a,
-     "cuna-destendida": 30,
-     "cuna-herramienta": 31,
-     "cuna-paciente": 32,
-     "cuna-reloj": 33,
-     "defensa-civil": 34,
-     "desvinculo": 35,
-     "diario": 36,
-     "doctora": 37,
-     "docuemento-manzana": 38,
-     "documento": 39,
-     "documento-corazon": 21,
-     "documento-cruz": 22,
-     "documento-cruz-hospital": 23,
-     "documento-lapiz": 24,
-     "documento-lupa": 25,
-     "documento-mas": 26,
-     "documento-paciente": 27,
-     "documento-reloj": 28,
-     "documento-termometro": 29,
-     "documento-tilde": 2a,
-     "documento-tubo": 2b,
-     "documentos": 2c,
-     "enfermera-outline": 2d,
-     "enfermero": 2e,
-     "entrada": 3b,
-     "enviar": 3c,
-     "escritorio": 3d,
-     "estadistica": 3f,
-     "estetoscopio": 40,
-     "exclamacion": 5e,
-     "farmacia": 60,
-     "familia": 2f,
-     "enfermero-outline-125": 3a,
-     "enfermero-outline-134": 3e,
-     "estomago": 5f,
-     "femenino": 5b,
-     "ferula": 7b,
-     "flecha-abajo": 7c,
-     "flecha-arriba": 7d,
-     "flecha-derecha": 7e,
-     "flecha-izquierda": 5c,
-     "formula": e000,
-     "frasco": e001,
-     "frasco-pastillas": e002,
-     "garganta": e003,
-     "ginecologia": e004,
-     "giro": e005,
-     "herramienta": e006,
-     "zoom-in": e007,
-     "zoom-out": e008,
-     "zoom": e009,
-     "vinculo": e00a,
-     "inhalador-52": e00b,
-     "pildora": e00c,
-     "recipiente": e00d,
-     "silencio": e00f,
-     "salida": e010,
-     "reloj": e011,
-     "paciente": e012,
-     "pastillas": e013,
-     "pastilla-79": e014,
-     "planilla-tubo": e016,
-     "planilla-pipeta": e017,
-     "planilla-electro": e018,
-     "pipeta": e019,
-     "pico-izquierda": e01a,
-     "pico-derecha": e01b,
-     "pico-arriba": e01c,
-     "pico-abajo": e01d,
-     "mano-nio": e00e,
-     "marcador": e015,
-     "marcador-salud": e01e,
-     "mas": e01f,
-     "masculino": e020,
-     "oxigeno": e021,
-     "oreja": e022,
-     "nube-subir": e023,
-     "nube-bajar": e024,
-     "nodos": e025,
-     "molecula": e026,
-     "microscopio": e027,
-     "interaccion": e028,
-     "lapiz-documento": e029,
-     "lapiz": e02a,
-     "paciente-hombre": e02c,
-     "paciente-mujer": e02d,
-     "medico": e02e,
-     "tilde": e02f,
-     "vacuna": e030,
-     "puerta-salir": e031,
-     "prohibido": e032,
-     "pregunta": e033,
-     "telefono": e034,
-     "termometro-55": e035,
-     "tablet": e036,
-     "recuperar": e037,
-     "paciente-rayos": e038,
-     "paciente-sol": e039,
-     "particulas": e03a,
-     "turno-menos": e03b,
-     "turno-mas": e03c,
-     "usuarios": e03d,
-     "usuario-tilde": e03e,
-     "usuario-mas": e03f,
-     "llamada-saliente": e040,
-     "usuario-reloj-outline": e045,
-     "usuario-tilde-outline": e046,
-     "pulmones": e043,
-     "logo-youtube": e044,
-     "logo-facebook": e047,
-     "logo-github": e048,
-     "mail": e049,
-     "paciente-casa": e04b,
-     "mano-gota": e04c,
-     "mano-herramienta": e04d,
-     "logo-github-outline": e04e,
-     "logo-facebook-outline": e04f,
-     "logo-youtube-outline": e050,
-     "logo-whatsapp": e051,
-     "logo-twitter-outline": e052,
-     "logo-twitter": e053,
-     "plasma": e05c,
-     "laboratorio": e02b,
-     "pc": e058,
-     "pie": e041,
-     "traumatologia": e042,
-     "turno-tilde": e04a,
-     "infante": e055,
-     "informacion": e056,
-     "mano": e057,
-     "mail-outline": e059,
-     "paciente-completo": e05a,
-     "hombre-corriendo": e05b,
-     "hombre-caminando": e054,
-     "turno-codigo": e05d,
-     "intestino": e05e,
-     "inhalador-80": e05f,
-     "paciente-medico": e060,
-     "interconsulta": e061,
-     "hospital": e062,
-     "historial": e063,
-     "jerarquia": e064,
-     "riones": e065,
-     "microbios": e066,
-     "resonancia": e067,
-     "calendario-fecha-abajo": e069,
-     "calendario-fecha-arriba": e06a,
-     "impresora": e06b,
-     "madre-hijo": e06c,
-     "mano-corazon": e06e,
-     "turno-bold": e071,
-     "turno-tilde-bold": e072,
-     "turno-mas-bold": e073,
-     "rayos": e075,
-     "informe-medico": e06d,
-     "web": e068,
-     "trastorno": e06f,
-     "termometro": e070,
-     "rayos-1": e074,
-     "semantics": e076,
-     "logo-ministerio": e077,
-     "logo-hpn": e078,
-     "logo-bpn": e079,
-     "medica": e07a,
-     "logo-tics": e07b,
-     "logo-ministerio-salud": e07c,
-     "esqueleto": e07d,
-     "hallazgo": e07e,
-     "etiqueta": 5d,
-     "universidad": e07f,
-     "estudiante": e080,
-     "engranaje-outline": e081,
+     "usuario-reloj-outline": e800,
+     "usuarios": e801,
+     "usuario-tilde": e802,
+     "usuario-tilde-outline": e803,
+     "vacuna": e804,
+     "vinculo": e805,
+     "web": e806,
+     "zoom": e807,
+     "zoom-in": e808,
+     "zoom-out": e809,
+     "-herramienta": e80a,
+     "abecedario": e80b,
+     "adn": e80c,
+     "alarma": e80d,
+     "ambulancia": e80e,
+     "anciana": e80f,
+     "andes": e810,
+     "andes-acronimo": e811,
+     "andes-marca": e812,
+     "anestesia": e813,
+     "auto-policia": e814,
+     "bisturi": e815,
+     "bloques-reloj": e816,
+     "calendario": e817,
+     "calendario-fecha": e818,
+     "calendario-fecha-arriba": e81a,
+     "calendario-fecha-bold": e81b,
+     "calendario-fecha-outline": e81c,
+     "calendario-flecha-abajo": e81d,
+     "calendario-flechas-circulares": e81e,
+     "calendario-mas": e81f,
+     "calendario-rango-bold": e820,
+     "calendarios": e821,
+     "calendario-tilde": e822,
+     "cama": e823,
+     "cama-candado": e824,
+     "cama-destendida": e825,
+     "cama-engranaje": e826,
+     "cama-herramienta": e827,
+     "cama-paciente": e828,
+     "camara-foto": e829,
+     "cama-reloj": e82a,
+     "camilla": e82b,
+     "camion-bomberos": e82c,
+     "candado": e82d,
+     "celular": e82e,
+     "celular-llave": e82f,
+     "celular-mano": e830,
+     "celular-paciente": e831,
+     "centro-salud": e832,
+     "circulo-botella": e833,
+     "circulo-camara": e834,
+     "circulo-hospital": e835,
+     "circulo-madre-hijo": e836,
+     "circulo-medico": e837,
+     "circulo-paciente": e838,
+     "click": e839,
+     "clinica": e83a,
+     "corazon": e83b,
+     "corona": e83c,
+     "corazon-outline": e83d,
+     "credencial-paciente": e83e,
+     "credencial-usuario": e83f,
+     "cruz": e840,
+     "cruz-hospital": e841,
+     "cuentagota": e842,
+     "cuerpo": e843,
+     "cuna-candado": e844,
+     "cuna-destendida": e845,
+     "cuna-herramienta": e846,
+     "cuna-paciente": e847,
+     "cuna-reloj": e848,
+     "defensa-civil": e849,
+     "desvinculo": e84a,
+     "diario": e84b,
+     "doctora": e84c,
+     "docuemento-manzana": e84d,
+     "documento": e84e,
+     "documento-corazon": e84f,
+     "documento-cruz": e850,
+     "documento-cruz-hospital": e851,
+     "documento-lapiz": e852,
+     "documento-lupa": e853,
+     "documento-mas": e854,
+     "documento-paciente": e855,
+     "documento-reloj": e856,
+     "documentos": e857,
+     "documento-termometro": e858,
+     "documento-tilde": e859,
+     "documento-tubo": e85a,
+     "enfermera-outline": e85b,
+     "enfermero": e85c,
+     "enfermero-outline": e85d,
+     "enfermero-contorno": e85e,
+     "engranaje-outline": e85f,
+     "entrada": e860,
+     "enviar": e861,
+     "escritorio": e862,
+     "esqueleto": e863,
+     "esqueleto_esqueleto": e864,
+     "estadistica": e865,
+     "estetoscopio": e866,
+     "estomago": e867,
+     "estudiante": e868,
+     "etiqueta": e869,
+     "oxigeno": e86a,
+     "familia": e86b,
+     "farmacia": e86c,
+     "femenino": e86d,
+     "ferula": e86e,
+     "flecha-abajo": e86f,
+     "flecha-arriba": e870,
+     "flecha-derecha": e871,
+     "flecha-izquierda": e872,
+     "formula": e873,
+     "frasco": e874,
+     "frasco-pastillas": e875,
+     "garganta": e876,
+     "ginecologia": e877,
+     "giro": e878,
+     "hallazgo": e879,
+     "historial": e87a,
+     "hombre-caminando": e87b,
+     "hombre-corriendo": e87c,
+     "hospital": e87d,
+     "impresora": e87e,
+     "infante": e87f,
+     "infantil": e880,
+     "informacion": e881,
+     "informe-medico": e882,
+     "cinta": e883,
+     "inhalador": e884,
+     "interaccion": e885,
+     "interconsulta": e886,
+     "intestino": e887,
+     "cesto": e889,
+     "lapiz": e88a,
+     "lapiz-documento": e88b,
+     "llamada-saliente": e88c,
+     "logo-bpn": e88d,
+     "logo-facebook": e88e,
+     "logo-facebook-outline": e88f,
+     "logo-github": e890,
+     "logo-github-outline": e891,
+     "logo-hpn": e892,
+     "logo-ministerio": e893,
+     "logo-ministerio-salud": e894,
+     "logo-provincia": e895,
+     "logo-tics": e896,
+     "logo-twitter": e897,
+     "logo-twitter-outline": e898,
+     "logo-whatsapp": e899,
+     "logo-youtube": e89a,
+     "logo-youtube-outline": e89b,
+     "lupa-ojo": e89c,
+     "madre-hijo": e89d,
+     "mail": e89e,
+     "mail-outline": e89f,
+     "mano": e8a0,
+     "mano-corazon": e8a1,
+     "mano-gota": e8a2,
+     "mano-herramienta": e8a3,
+     "mano-niño": e8a4,
+     "marcador": e8a5,
+     "marcador-salud": e8a6,
+     "mas": e8a7,
+     "masculino": e8a8,
+     "mdi-download": e8a9,
+     "medica": e8aa,
+     "medico": e8ab,
+     "microbios": e8ac,
+     "microscopio": e8ad,
+     "molecula": e8ae,
+     "nodos": e8af,
+     "nube-bajar": e8b0,
+     "nube-subir": e8b1,
+     "oreja": e8b2,
+     "paciente": e8b4,
+     "paciente-casa": e8b5,
+     "paciente-completo": e8b6,
+     "paciente-hombre": e8b7,
+     "paciente-medico": e8b8,
+     "paciente-mujer": e8b9,
+     "paciente-rayos": e8ba,
+     "paciente-sol": e8bb,
+     "pildoras": e8be,
+     "pastillas": e8bf,
+     "pc": e8c0,
+     "pico-abajo": e8c1,
+     "pico-arriba": e8c2,
+     "pico-derecha": e8c3,
+     "pico-izquierda": e8c4,
+     "pie": e8c5,
+     "pildora": e8c6,
+     "pipeta": e8c7,
+     "planilla-electro": e8c8,
+     "planilla-pipeta": e8c9,
+     "planilla-tubo": e8ca,
+     "prohibido": e8cd,
+     "puerta-salir": e8ce,
+     "pulmones": e8cf,
+     "rayos": e8d0,
+     "recipiente": e8d1,
+     "recuperar": e8d2,
+     "reloj": e8d3,
+     "resonancia": e8d4,
+     "semantics": e8d7,
+     "silencio": e8d8,
+     "tablet": e8d9,
+     "telefono": e8da,
+     "termometro": e8db,
+     "llave": e8dc,
+     "tilde": e8de,
+     "trastorno": e8df,
+     "traumatologia": e8e0,
+     "turno-bold": e8e1,
+     "turno-codigo": e8e2,
+     "turno-mas": e8e3,
+     "turno-mas-bold": e8e4,
+     "turno-menos": e8e5,
+     "turno-reloj-bold": e8e6,
+     "turno-tilde": e8e7,
+     "turno-tilde-bold": e8e8,
+     "user-folder": e8ea,
+     "riñones": e8d5,
+     "documento-cursor": e8ec,
+     "salida": e8d6,
+     "calendario-fecha-abajo": e819,
 );
