--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,8 +1,8 @@
-$adi-filename:         "andes.font";
-$adi-font-name:        "Andes Icons";
-$adi-font-family:      "andesicons";
-$adi-font-weight:      "regular";
-$adi-font-path:        "../fonts" !default;
-$adi-font-size-base:   24px !default;
-$adi-css-prefix:       adi !default;
-$adi-version:          "1.0.0" !default;
+$adi-filename: "andes-font";
+$adi-font-name: "Andes Icons";
+$adi-font-family: "andesicons";
+$adi-font-weight: "regular";
+$adi-font-path: "../fonts" !default;
+$adi-font-size-base: 24px !default;
+$adi-css-prefix: adi !default;
+$adi-version: "2.0.0" !default;
